--- a/projekt_skize.tex
+++ b/projekt_skize.tex
@@ -20,12 +20,6 @@
 \usepackage{mdwlist}
 \usepackage[table,usenames,dvipsnames]{xcolor}
 \usepackage{currfile}
-\usepackage{tikz}
-\usepackage{attachfile}
-\usetikzlibrary{shapes}
-\usetikzlibrary{arrows}
-\usepackage{attachfile}
-
 
 
 \hypersetup{
@@ -82,11 +76,34 @@
 
 \subsection*{Kontext \& Umfeld}
 
-\subsection*{}
-\subsection*{}
-\subsection*{}
-\subsection*{}
-\subsection*{}
+\subsection*{Zielsetzungen}
+
+\subsection*{Methodik}
+
+\subsection*{Erwartete Resultate}
+
+\subsection*{Erwartete Schwierigkeiten / Herausforderungen}
+
+\subsection*{Projektteam}
+
+  \begin{description}
+    \item[Andonie Stefan] Zuständig für ?
+    \item[Grütter Pascal] Zuständig für ?
+  \end{description}
+
+\subsection*{Aspekte der Nachhaltigkeit}
+
+  \begin{description}
+    \item[Ökologisch] ...
+    \item[Ökonomisch] ...
+    \item[Sozial] ..
+  \end{description}
+
+\subsection*{Zeitplan}
+
+\subsection*{Quellen}
+
+\subsection*{Offene Fragen}
 
 
 \end{document}
