started with Erwartete Resultate and Aspekte...

--- a/projekt_skize.tex
+++ b/projekt_skize.tex
@@ -82,6 +82,12 @@
 
 \subsection*{Erwartete Resultate}
 
+  Es ist zu erwarten, dass die Wärmepumpe im direkten Vergleich mit einer
+  Ölheizung besser abschneidet im Bezug auf die Aspekte der Nachhaltigkeit.
+  
+  Wir erwarten, dass eine Wärmepumpe Energieeffizienter arbeitet und auch
+  umweltfreundlicher sein wird, da keine Fossilen Brennstoffe zu Einsatz kommen.
+
 \subsection*{Erwartete Schwierigkeiten / Herausforderungen}
 
 \subsection*{Projektteam}
@@ -94,9 +100,11 @@
 \subsection*{Aspekte der Nachhaltigkeit}
 
   \begin{description}
-    \item[Ökologisch] ...
-    \item[Ökonomisch] ...
-    \item[Sozial] ..
+    \item[Ökologisch] Reduktion von Treibhausgasemissionen im Transport und
+    der Energiegewinnung.
+    \item[Ökonomisch] Langfristige Einsparung der Kosten durch Reduzierung des
+    externen Energiebedarfs wie Strom und fossile Brennstoffe.
+    \item[Sozial] Autonome und Dezentrale Energiegewinnung.
   \end{description}
 
 \subsection*{Zeitplan}
