--- a/projekt_skize.tex
+++ b/projekt_skize.tex
@@ -31,8 +31,8 @@
 }
 
 \title{Nachhaltigkeit in den Ingenieurswissenschaften}
-\subtitle{Projekt Skize}
-\author{Stefan Andonie \& Pascal Grütter}
+\subtitle{Projekt Skizze}
+\author{Stefan Andonie \& Pascal Grüter}
 \date{\today{}}
 
 % Make title and author accessible in the header/footer
@@ -74,27 +74,39 @@
 
 \subsection*{Zusammenfassung}
 
+Wir zeigen die grobe Funktionsweise einer Sole-Wasser Wärmepumpe auf. Dabei wird auf die verschiedenen Aspekte der Nachhaltigkeit eingegangen. Mit dem Vergleich mit einer Ölheizung wollen wir zeigen, dass Wärmepumpen effizienter und nachhaltiger sind.
+
 \subsection*{Kontext \& Umfeld}
+
+Ich (Pascal Grüter) habe selber eine Wärmepumpe bei mir zuhause. Interesse wieviel sparsamer und nachhaltiger diese Heizung nun gegenüber einer Ölheizung wirklich ist.
 
 \subsection*{Zielsetzungen}
 
+Erklärung des Aufbaus einer Wärmepumpe.
+Vergleich mit Ölbrennkessel.
+
 \subsection*{Methodik}
+
+Funktionsweise der Wärmepumpe und Ölbrennkessel beschreiben. Aspekte der Nachhaltigkeit aufzeigen. \\
+Für den Vergleich gehen wir von einem definierten Raum aus (z.B. 100 m$^{3}$) und berechnen, wie viel Energie die beiden Heizungen brauchen, um diesen Raum um ein Grad Celsius zu erwärmen.
 
 \subsection*{Erwartete Resultate}
 
   Es ist zu erwarten, dass die Wärmepumpe im direkten Vergleich mit einer
   Ölheizung besser abschneidet im Bezug auf die Aspekte der Nachhaltigkeit.
   
-  Wir erwarten, dass eine Wärmepumpe Energieeffizienter arbeitet und auch
-  umweltfreundlicher sein wird, da keine Fossilen Brennstoffe zu Einsatz kommen.
+  Wir erwarten, dass eine Wärmepumpe energieeffizienter arbeitet und auch
+  umweltfreundlicher sein wird, da keine fossilen Brennstoffe zum Einsatz kommen.
 
 \subsection*{Erwartete Schwierigkeiten / Herausforderungen}
+
+Da wir beide Informatik studieren, werden wir gewisse Funktionen der Heizung evt. vereinfacht darstellen müssen. Sonst verstehen wir es selber nicht.
 
 \subsection*{Projektteam}
 
   \begin{description}
-    \item[Andonie Stefan] Zuständig für ?
-    \item[Grütter Pascal] Zuständig für ?
+    \item[Andonie Stefan (andos1)]
+    \item[Grüter Pascal (grutp1)]
   \end{description}
 
 \subsection*{Aspekte der Nachhaltigkeit}
@@ -109,9 +121,18 @@
 
 \subsection*{Zeitplan}
 
+25.04: Präsentation
+Bis Ende April: Funktionsweise und Aspekte der Wärmepumpe
+Bis Mitte Mai: Vergleich mit Ölheizung
+
 \subsection*{Quellen}
+
+http://www.waltermeier.com/de/walter-meier-in-der-schweiz/ \\
+https://de.wikipedia.org/wiki/Heizöl \\
+https://de.wikipedia.org/wiki/Wärmepumpe \\
 
 \subsection*{Offene Fragen}
 
+Physkalische Definition der Heizleistung?
 
 \end{document}
