added som methoden

--- a/projekt_skize.tex
+++ b/projekt_skize.tex
@@ -90,6 +90,12 @@ Vergleich mit Ölbrennkessel.
 Funktionsweise der Wärmepumpe und Ölbrennkessel beschreiben. Aspekte der Nachhaltigkeit aufzeigen. \\
 Für den Vergleich gehen wir von einem definierten Raum aus (z.B. 100 m$^{3}$) und berechnen, wie viel Energie die beiden Heizungen brauchen, um diesen Raum um ein Grad Celsius zu erwärmen.
 
+Des weiteren werden wir eine SWOT Analyse erstellen um die Schwächen und Stärken der Wärmepumpe aufzuführen.
+Es soll auch eine Nachhaltigkeitsrosette erstellt werden bei der Ausgewählte
+Eigenschaften bewertet und Graphisch dargestellt werden. Somit können beide Heizsysteme
+direkt verglichen werden.
+
+
 \subsection*{Erwartete Resultate}
 
   Es ist zu erwarten, dass die Wärmepumpe im direkten Vergleich mit einer
