changed margins and font size to fit everything on a single page + removed footer

--- a/projekt_skize.tex
+++ b/projekt_skize.tex
@@ -1,6 +1,6 @@
-\documentclass[10pt,paper=a4,final]{scrartcl}
+\documentclass[09pt,paper=a4,final]{scrartcl}
 \usepackage[utf8]{inputenc}
-\usepackage{geometry}           %allows us to specify the 'seitenrand'
+\usepackage[top=2cm,bottom=2cm,left=3cm,right=3cm,]{geometry}           %allows us to specify the 'seitenrand'
 \usepackage{graphicx}           %package used to include graphics
 \usepackage{caption}
 \usepackage{subcaption}
@@ -61,12 +61,12 @@
 %\lhead{\Author}
 \lhead{\itshape \Author \newline \Subtitle \newline \Title \newline BZG2309a}
 %\rhead{\Title}
-\rhead{ \includegraphics[width=4cm]{bfh_logo} }
-\fancyfoot[LE,LO]{\textbf{BFH - Berne University of Applied Sciences} \newline
-\currfilename }
+\rhead{ \includegraphics[width=3cm]{bfh_logo} }
+%\fancyfoot[LE,LO]{\textbf{BFH - Berne University of Applied Sciences} \newline
+%\currfilename }
 %\fancyfoot[RE,RO]{\thepage}
 \renewcommand{\headrulewidth}{0pt}
-\renewcommand{\footrulewidth}{0.5pt}
+%\renewcommand{\footrulewidth}{0.5pt}
 
 \begin{document}
 
