started swot analysis

--- a/latex/template.tex
+++ b/latex/template.tex
@@ -176,6 +176,8 @@
 %---------------------------------------------------------------------------
 \pagenumbering{arabic}
 
+\include{kapitel/swot}
+
 \include{kapitel/einleitung}
 \include{kapitel/anleitungen}
 \include{kapitel/satzspiegeltest}
