Projektskizze angepasst, Checkliste Energiebilanz aus Mail kopiert

--- a/projekt_skize.tex
+++ b/projekt_skize.tex
@@ -13,8 +13,6 @@
 \usepackage{longtable}
 \usepackage{enumitem}
 \usepackage{ngerman} % Make the document German
-% Make the document German
-\usepackage{ngerman}
 \usepackage{fancyhdr}
 \usepackage{lipsum}
 \usepackage{mdwlist}
@@ -31,7 +29,7 @@
 }
 
 \title{Nachhaltigkeit in den Ingenieurswissenschaften}
-\subtitle{Projekt Skizze}
+\subtitle{Projektskizze}
 \author{Stefan Andonie \& Pascal Grüter}
 \date{\today{}}
 
@@ -70,7 +68,7 @@
 
 \begin{document}
 
-\section*{Nachhaltigkeitsanalyse einer Wärmepumpe}
+\section*{Nachhaltigkeitsanalyse einer Wärmepumpe mit}
 
 \subsection*{Zusammenfassung}
 
@@ -83,26 +81,22 @@ Ich (Pascal Grüter) habe selber eine Wärmepumpe bei mir zuhause. Interesse wie
 \subsection*{Zielsetzungen}
 
 Erklärung des Aufbaus einer Wärmepumpe.
-Vergleich mit Ölbrennkessel.
+Vergleich mit Ölbrennkessel in Bezug auf die Nachhaltigkeit.
 
 \subsection*{Methodik}
 
-Funktionsweise der Wärmepumpe und Ölbrennkessel beschreiben. Aspekte der Nachhaltigkeit aufzeigen. \\
-Für den Vergleich gehen wir von einem definierten Raum aus (z.B. 100 m$^{3}$) und berechnen, wie viel Energie die beiden Heizungen brauchen, um diesen Raum um ein Grad Celsius zu erwärmen.
+Funktionsweise der Wärmepumpe und Ölbrennkessel beschreiben. Aspekte der Nachhaltigkeit aufzeigen indem wir für beide Produkte eine SWOT-Analyse, eine Energiebilanz und eine Nachhaltigkeitsrosette erstellen. \\
+Für den Vergleich gehen wir von einem definierten Raum aus (z.B. 100 m$^{3}$) und berechnen, wie viel Energie die beiden Heizungen brauchen, um diesen Raum um ein Grad Celsius zu erwärmen. Alternativ kann auch die Nutzfläche eines Gebäudes genommen werden um zu berechnen wieviel Leistung die beiden Heizungen aufbringen müssen um diese Fläche auf 20 Grad zu halten.
 
-Des weiteren werden wir eine SWOT Analyse erstellen um die Schwächen und Stärken der Wärmepumpe aufzuführen.
-Es soll auch eine Nachhaltigkeitsrosette erstellt werden bei der Ausgewählte
-Eigenschaften bewertet und Graphisch dargestellt werden. Somit können beide Heizsysteme
-direkt verglichen werden.
 
 
 \subsection*{Erwartete Resultate}
 
-  Es ist zu erwarten, dass die Wärmepumpe im direkten Vergleich mit einer
-  Ölheizung besser abschneidet im Bezug auf die Aspekte der Nachhaltigkeit.
-  
-  Wir erwarten, dass eine Wärmepumpe energieeffizienter arbeitet und auch
-  umweltfreundlicher sein wird, da keine fossilen Brennstoffe zum Einsatz kommen.
+Es ist zu erwarten, dass die Wärmepumpe im direkten Vergleich mit einer
+Ölheizung besser abschneidet im Bezug auf die Aspekte der Nachhaltigkeit.
+\\
+Wir erwarten, dass eine Wärmepumpe energieeffizienter arbeitet und auch
+umweltfreundlicher sein wird, da keine fossilen Brennstoffe zum Einsatz kommen.
 
 \subsection*{Erwartete Schwierigkeiten / Herausforderungen}
 
@@ -118,7 +112,7 @@ Da wir beide Informatik studieren, werden wir gewisse Funktionen der Heizung evt
 \subsection*{Aspekte der Nachhaltigkeit}
 
   \begin{description}
-    \item[Ökologisch] Reduktion von Treibhausgasemissionen im Transport und
+    \item[Ökologisch] Reduktion von Treibhausgasemissionen im Transport (Da kein Öl transportiert werden muss) und
     der Energiegewinnung.
     \item[Ökonomisch] Langfristige Einsparung der Kosten durch Reduzierung des
     externen Energiebedarfs wie Strom und fossile Brennstoffe.
@@ -127,8 +121,8 @@ Da wir beide Informatik studieren, werden wir gewisse Funktionen der Heizung evt
 
 \subsection*{Zeitplan}
 
-25.04: Präsentation
-Bis Ende April: Funktionsweise und Aspekte der Wärmepumpe
+25.04: Präsentation \\
+Bis Ende April: Funktionsweise und Aspekte der Wärmepumpe \\
 Bis Mitte Mai: Vergleich mit Ölheizung
 
 \subsection*{Quellen}
@@ -136,9 +130,7 @@ Bis Mitte Mai: Vergleich mit Ölheizung
 http://www.waltermeier.com/de/walter-meier-in-der-schweiz/ \\
 https://de.wikipedia.org/wiki/Heizöl \\
 https://de.wikipedia.org/wiki/Wärmepumpe \\
+https://de.wikipedia.org/wiki/Grundfläche\_(Architektur) \\
 
-\subsection*{Offene Fragen}
-
-Physkalische Definition der Heizleistung?
 
 \end{document}
