--- a/latex/template.tex
+++ b/latex/template.tex
@@ -179,17 +179,14 @@
 \include{kapitel/swot}
 
 \include{kapitel/einleitung}
-\include{kapitel/anleitungen}
-\include{kapitel/satzspiegeltest}
-\include{kapitel/schlussfolgerungen}
 %---------------------------------------------------------------------------
 
 % Selbständigkeitserklärung
 %---------------------------------------------------------------------------
-\cleardoublepage
-\phantomsection 
-\addcontentsline{toc}{chapter}{Selbständigkeitserklärung}
-\include{vorspann/selbstaendigkeitserklaerung}
+%\cleardoublepage
+%\phantomsection 
+%\addcontentsline{toc}{chapter}{Selbständigkeitserklärung}
+%\include{vorspann/selbstaendigkeitserklaerung}
 %---------------------------------------------------------------------------
 
 % Glossary
@@ -235,9 +232,7 @@
 %---------------------------------------------------------------------------
 \appendix
 \settocdepth{section}
-\include{anhang/beispielanhang}
-\include{anhang/beispielanhangB}
-\include{anhang/inhaltCDROM}
+%\include{anhang/beispielanhang}
 %---------------------------------------------------------------------------
 
 %---------------------------------------------------------------------------
