--- a/Todo.txt
+++ b/Todo.txt
@@ -6,3 +6,5 @@ Für beide Produkte (Methodik Skizze):
 -Energiebilanz
 -SWOT Analyse
 -Nachhaltigkeitsrosette
+
+Energiebilanz Aufgabe: Bis 2. Mai, SunPower Solarzelle (Siehe Blatt Unterricht)
