first draft of systemgrenze

--- a/latex/template.tex
+++ b/latex/template.tex
@@ -177,6 +177,7 @@
 \pagenumbering{arabic}
 
 \include{kapitel/swot}
+\include{kapitel/systemgrenze}
 
 \include{kapitel/einleitung}
 %---------------------------------------------------------------------------
