--- a/latex/template.tex
+++ b/latex/template.tex
@@ -178,6 +178,7 @@
 
 \include{kapitel/swot}
 \include{kapitel/systemgrenze}
+\include{kapitel/rosette}
 
 \include{kapitel/einleitung}
 %---------------------------------------------------------------------------
