Kodierung auf utf8, neuer name

--- a/latex/kapitel/rosette.tex
+++ b/latex/kapitel/rosette.tex
@@ -1,8 +1,8 @@
 \chapter{Nachhaltigkeits Rosette}
 \label{chap:rosette}
 
-Hierzu sollen für beide Systeme je vier Kriterien in den drei Kategorien
-Umwelt, Wirtschaft und Gesellschaft ausgewählt und subjektiv beurteilt werden.
+Hierzu sollen fÃ¼r beide Systeme je vier Kriterien in den drei Kategorien
+Umwelt, Wirtschaft und Gesellschaft ausgewÃ¤hlt und subjektiv beurteilt werden.
 
 \section{Kriterien}
 
@@ -24,22 +24,22 @@ Umwelt, Wirtschaft und Gesellschaft ausgewählt und subjektiv beurteilt werden.
  \item Gesellschaft
     \begin{itemize}
       \item Akzeptanz
-      \item Lärmbelastung
+      \item LÃ¤rmbelastung
       \item hallo
       \item hallo
     \end{itemize}
 \end{itemize}
 
 \section{Bewertung}
-\subsection{Überblick}
+\subsection{Ãœberblick}
 
 \begin{center}
 \begin{tabular}[c]{|p{0.25 \textwidth}|p{0.25 \textwidth}|p{0.25 \textwidth}|}
 
   \hline
   \textbf{\Large{Kriterium}} &
-  \textbf{\Large{Wärmepumpe}} &
-  \textbf{\Large{Ölbrennwertkessel}} \\ \hline
+  \textbf{\Large{WÃ¤rmepumpe}} &
+  \textbf{\Large{Ã–lbrennwertkessel}} \\ \hline
 
   \multicolumn{3}{|c|}{\textbf{\Large{Umwelt}}} \\ \hline
   
@@ -69,7 +69,7 @@ Umwelt, Wirtschaft und Gesellschaft ausgewählt und subjektiv beurteilt werden.
 
   Akzeptanz
   & 0 & 0 \\
-  Lärmbelastung
+  LÃ¤rmbelastung
   & 0 & 0 \\
 
   & 0 & 0 \\
@@ -80,6 +80,6 @@ Umwelt, Wirtschaft und Gesellschaft ausgewählt und subjektiv beurteilt werden.
 \end{tabular}
 \end{center}
 
-\subsection{Begründungen}
+\subsection{BegrÃ¼ndungen}
 
 
