--- a/latex/kapitel/swot.tex
+++ b/latex/kapitel/swot.tex
@@ -1,7 +1,7 @@
 \chapter{SWOT Analyse}
 \label{chap:swot}
 
-\section{Wärmepumpe}
+\section{WÃ¤rmepumpe}
 
 \begin{tabular}[c]{|p{0.5 \textwidth}|p{0.5 \textwidth}|}
   \hline
@@ -9,7 +9,7 @@
   \textbf{\Large{Weaknesses}} \\ \hline
   
   \begin{itemize}
-    \item Geringe Schadstoff belastung für die Umwelt
+    \item Geringe Schadstoff belastung fÃ¼r die Umwelt
     \item Geringer Energieverbrauch
     \item Geringere Betriebskosten
   \end{itemize}
@@ -26,21 +26,21 @@
   \textbf{\Large{Threats}} \\ \hline
   
   \begin{itemize}
-    \item Sanierung alter Gebäude
+    \item Sanierung alter GebÃ¤ude
     \item Neubauten
-    \item Einführung von Energiestandards für Gebäude
+    \item EinfÃ¼hrung von Energiestandards fÃ¼r GebÃ¤ude
   \end{itemize}
   &
   
   \begin{itemize}
-    \item Tiefer Ölpreis
+    \item Tiefer Ã–lpreis
     \item Solarkraft
-    \item Abwärme Industrie
+    \item AbwÃ¤rme Industrie
   \end{itemize}  
   \\ \hline
 \end{tabular}
 
-\section{Ölheitzung}
+\section{Ã–lheizung}
 
 \begin{tabular}[c]{|p{0.5 \textwidth}|p{0.5 \textwidth}|}
   \hline
@@ -48,8 +48,8 @@
   \textbf{\Large{Weaknesses}} \\ \hline
   
   \begin{itemize}
-    \item Sowohl hohe wie auch iefe Vorlauftemperaturen möglich
-    \item Beheitzung alter oder schlecht isolierter Gebäude
+    \item Sowohl hohe wie auch iefe Vorlauftemperaturen mÃ¶glich
+    \item Beheitzung alter oder schlecht isolierter GebÃ¤ude
     \item Direkte montage ohne Bohrungen oder Leitungen
   \end{itemize}
   &
@@ -59,8 +59,8 @@
     \item Schadstoffemmisionen
     \item Energiekosten
     \item Hoher Energieverbrauch
-    \item Einbau eines Öltanks
-    \item Brandgefahr und Möglichkeit des Auslaufens von ÖL
+    \item Einbau eines Ã–ltanks
+    \item Brandgefahr und MÃ¶glichkeit des Auslaufens von Ã–L
   \end{itemize}
   \\ \hline
   
@@ -68,16 +68,16 @@
   \textbf{\Large{Threats}} \\ \hline
   
   \begin{itemize}
-    \item Tiefer Ölpreis
+    \item Tiefer Ã–lpreis
     \item Bessere Energieeffizienz und Verbrauch durch neue Technologie
     \item Geringerer Schadstoffausstoss durch neue Technologie 
   \end{itemize}
   &
   
   \begin{itemize}
-    \item Nuzung von Erdwärme und Industrie Abwärme
+    \item Nuzung von ErdwÃ¤rme und Industrie AbwÃ¤rme
     \item Solarkraft
-    \item Einführung von Energiestandards für Gebäude
+    \item EinfÃ¼hrung von Energiestandards fÃ¼r GebÃ¤ude
   \end{itemize}  
   \\ \hline
 \end{tabular}
