--- a/latex/kapitel/systemgrenze.tex
+++ b/latex/kapitel/systemgrenze.tex
@@ -3,53 +3,53 @@
 
 Die Definition einer Systemgrenze dient dazu das System auf die Wesentlichen
 Punkte zu reduzieren die untersucht werden sollen und die Analyse in einem
-überschaubaren Rahmen zuhalten.
-Dazu müssen Annahmen getroffen werden und Vereinfachungen gemacht werden.
-Die Aussagekraft des Resultates hängt stark damit zusammen wie diese getroffen
-werden. Darum ist es besser ein möglichst konkretes System anzuschauen anstatt
+ÃƒÂ¼berschaubaren Rahmen zuhalten.
+Dazu mÃ¼ssen Annahmen getroffen werden und Vereinfachungen gemacht werden.
+Die Aussagekraft des Resultates hÃ¤ngt stark damit zusammen wie diese getroffen
+werden. Darum ist es besser ein mÃ¶glichst konkretes System anzuschauen anstatt
 einen Allgemeinen Fall zu formulieren.
 
-Unser Modell besteht aus einem System, in das Ressourcen eingeführt werden
+Unser Modell besteht aus einem System, in das Ressourcen eingefÃ¼hrt werden
 (Input) und das daraus eine Nutzeinheit produziert, die aus dem System gewonnen
 wird (Output).
 
 \section{das System}
 
 Wir betrachten in unserer Arbeit ein Heizsystem in Form einer
-Solewasserwärhmepumpe und als Vergleichssystem eine Heizung mit
-Ölbrennwertkessel.
+SolewasserwÃ¤rhmepumpe und als Vergleichssystem eine Heizung mit
+Ã–lbrennwertkessel.
 
 \section{Input}
 
 Wir betrachten in unserer Arbeit den laufenden Energieverbrauch der beiden
 Systeme pro Jahr.
-Beiden Systemen muss von aussen Energie zugefügt werden um sie zu betreiben.
-Daher können wir die Input Einheit in kWH ausdrücken.
+Beiden Systemen muss von aussen Energie zugefÃ¼gt werden um sie zu betreiben.
+Daher kÃ¶nnen wir die Input Einheit in kWH ausdrÃ¼cken.
 
-Die Solewasserwärmepumpe bezieht ihre Energie hauptsächlich aus Zwei quellen,
-der aus der Erde in Form von Erdwärme und vom Stromnetz, vor allem um den
+Die SolewasserwÃ¤rmepumpe bezieht ihre Energie hauptsÃ¤chlich aus Zwei quellen,
+der aus der Erde in Form von ErdwÃ¤rme und vom Stromnetz, vor allem um den
 Kompressor zu betreiben und den Solewasserkreislauf in Gang zuhalten.
-Für uns ist vor allem der Stromverbrauch interessant, da dies ein Kostenpunkt
+FÃ¼r uns ist vor allem der Stromverbrauch interessant, da dies ein Kostenpunkt
 ist und damit auch Umweltbelastungen verbunden sind.
 Als Grundlage nehmen wir den Schweizer Energiemix nach ...
-Wir betrachten die Erdwärme als Öffentlichesgut, das unbegrenzt und kostenlos
-zur Verfügung steht.
+Wir betrachten die ErdwÃ¤rme als Ã–ffentlichesgut, das unbegrenzt und kostenlos
+zur VerfÃ¼gung steht.
 
-Ein Ölbrennwertkessel bezieht seine Energie in Form von Heitzöl.
-Wir können den Energieinput dadurch berechnen indem wir den Liter verbrauch
-ansehen und die Energiedichte eines Liter Öls somit haben wir wider den
+Ein Ã–lbrennwertkessel bezieht seine Energie in Form von HeitzÃ¶l.
+Wir kÃ¶nnen den Energieinput dadurch berechnen indem wir den Liter verbrauch
+ansehen und die Energiedichte eines Liter Ã–ls somit haben wir wider den
 Energieinput in kWH pro Jahr erfasst.
-Für einen Liter Heizöl dieses Typs wird so und so viel Energie gerechnet ...
+FÃ¼r einen Liter HeizÃ¶l dieses Typs wird so und so viel Energie gerechnet ...
 
 Die Graueenergie, die bei der Herstellung und bei der Montage der Systeme
 verbraucht wird nicht weiter in die Rechnung aufgenommen.
 Wir nehmen an, das die Systeme im Wesentlich aus den gleichen Materialien
-gefertigt sind und das  das Bohren der Löcher für die Erdwärmegewinnung
+gefertigt sind und das  das Bohren der LÃ¶cher fÃ¼r die ErdwÃ¤rmegewinnung
 nicht sehr ins Gewicht fallen wird.
-Wir nehmen auch an, das das System für eine Lange Dauer erhalten bleibt.
+Wir nehmen auch an, das das System fÃ¼r eine Lange Dauer erhalten bleibt.
 Die Lebensdauer einer Heizung ist etwa die selbe wie die des Hauses, 
 30 - 50 Jahre.
-Da wir den Verbrauch pro Jahr berechnen würde sich die Graueenergie auf diesen
+Da wir den Verbrauch pro Jahr berechnen wÃ¼rde sich die Graueenergie auf diesen
 Zeitraum verteilen.
 
 \section{Output}
@@ -59,16 +59,16 @@ Um was handelt es sich hierbei?
 bla bla ...
 
 Eine Heizung ist ein Wasserkreislauf der mit einer bestimmten Temperatur
-(Rücklauftemperatur) in das System eintritt und auf ein gewisses Temperaturniveau
-gehoben wird (Vorlauftemperatur). Das erhitzte Wasser verlässt das System und
+(RÃ¼cklauftemperatur) in das System eintritt und auf ein gewisses Temperaturniveau
+gehoben wird (Vorlauftemperatur). Das erhitzte Wasser verlÃ¤sst das System und
 gibt die aufgenommene Energie an die Umgebung ab.
  
 Moderne Heizungsysteme werden als Fussbodenheizung realisiert.
-Wir können die Benötigte Heizleistung für eine Fläche von 100 $m^2$
+Wir kÃ¶nnen die BenÃ¶tigte Heizleistung fÃ¼r eine FlÃ¤che von 100 $m^2$
 berechnen.
 berechnung wie Hier ...
 
-Aus der Outputenergie können wir über den Wirkungsgrad Rückschlüsse über
+Aus der Outputenergie kÃ¶nnen wir Ã¼ber den Wirkungsgrad RÃ¼ckschlÃ¼sse Ã¼ber
 den Input anstellen.
 
 
