--- a/latex/vorspann/versionen.tex
+++ b/latex/vorspann/versionen.tex
@@ -17,7 +17,7 @@ Version	\> Datum	\> Status		\> Bemerkungen		\\
 0.3	\> 02.09.2013	\> Entwurf		\> Donec eget aliquam urna. Lorem ipsum dolor sit amet	\\ 
 1.0	\> 12.09.2013	\> Definitiv	\> Lorem ipsum dolor sit ametPhasellus scelerisque, leo sed iaculis ornare 	\\ 
 1.1	\> 04.11.2013	\> Korrektur	\> Layout angepasst	\\
-1.2	\> 01.02.2014	\> Ergänzung	\> Kapitel 1.1 erweitert	\\
+1.2	\> 01.02.2014	\> ErgÃ¤nzung	\> Kapitel 1.1 erweitert	\\
 \end{tabbing}
 
 \end{textblock}
