--- a/presentation/handout.tex
+++ b/presentation/handout.tex
@@ -68,27 +68,25 @@
 
 \begin{document}
 
-\section*{Wärmepumpe vs. Ölbrennkessel}
+\section*{Handout: Wärmepumpe vs. Ölbrennkessel}
 
 \subsection*{Einleitung}
 
-Wir wollen kurz die Funktionen von den beiden Heizungstypen Wärmepumpe und Ölbrennkessel aufzeigen. Damit kann anschliessend berechnet werden, welche Ressourcen für die erbrachte Heizleistung verbraucht werden. Mithilfe diesen Werten erstellen wir für beide Heizungen eine SWOT-Analyse.
+Wir wollen kurz die Funktionen von den beiden Heizungstypen Wärmepumpe und Ölbrennkessel aufzeigen. Damit kann anschliessend berechnet werden, welche Ressourcen für die erbrachte Heizleistung verbraucht werden. Mithilfe diesen Werten haben wir für beide Heizungen eine SWOT-Analyse erstellt.
 
 \subsection*{Wärmepumpe}
 
-Funktionweise
+Die Wärmepumpe hat das gleiche Funktionsprinzip wie ein Kühlschrank. Nur das sie genau umgekehrt arbeitet. Das Wärmemittel wird mit Erdwärme aufgeheizt. Das gasförmige Mittel wird nun komprimiert bevor es seine Wärme an den Wasserkreislauf abgibt und wieder flüssig wird.
 
 \subsection*{Ölbrennkessel}
 
-Funktionweise
+Das Öl wird verbrannt um den Wasserkreislauf aufzuwärmen. Bei dem Verbrennungsprozess entsteht auch noch Wasserdampf. Dieser wird zusätzlich noch genutzt um das Rücklaufwasser aufzuwärmen. Die Ölverbrennung ist sehr effizient und erreicht Wirkungsgrade von bis zu 99%.
 
 \subsection*{SWOT}
 
 
 \subsection*{Quellen}
 
-http://www.waltermeier.com/de/walter-meier-in-der-schweiz/ \\
-https://de.wikipedia.org/wiki/Heizöl \\
 
 
 \end{document}
