--- a/latex/datenbanken/bibliography.bib
+++ b/latex/datenbanken/bibliography.bib
@@ -7,7 +7,7 @@
 
 @book{kopka:band1,
 	author = {Helmut Kopka},
-	title = {\LaTeX, Band 1: Eine Einführung},
+	title = {\LaTeX, Band 1: Eine EinfÃ¼hrung},
 	publisher = {Pearson Studium},
 	journal = {Operations Research},
 	volume = {3},
@@ -16,7 +16,7 @@
 }
 
 @booklet{raichle:bibtex_programmierung,
-  title = {Einführung in die {BibTeX}-{P}rogrammierung},
+  title = {EinfÃ¼hrung in die {BibTeX}-{P}rogrammierung},
   author = {Bernd Raichle},
   year = {2002},
   institution = {DANTE},
@@ -43,7 +43,7 @@
 
 @booklet{Marti06,
 		author = {Fausi Marti},
-		title = {Schreiben über {T}echnik -- {R}edaktion und {G}estaltung von technischen {B}erichten und anderen technikbezogenen {T}exten},
+		title = {Schreiben Ã¼ber {T}echnik -- {R}edaktion und {G}estaltung von technischen {B}erichten und anderen technikbezogenen {T}exten},
 		publisher = {Fausi Marti -- BFH},
 		year = {2006},
 		organization = {Berner Fachhochschule}
@@ -58,14 +58,14 @@
 }
 
 @booklet{juergens:einfuehrung,
-    author = {Manuela Jürgens},
-    title = {LaTeX -- eine {E}inführung und ein bisschen mehr...},
+    author = {Manuela JÃ¼rgens},
+    title = {LaTeX -- eine {E}infÃ¼hrung und ein bisschen mehr...},
     year = {2000},
     url = {http://www.fernuni-hagen.de/zmi/katalog/A026.shtml},
 }
 
 @booklet{juergens:fortgeschritten,
-    author = {Manuela Jürgens},
+    author = {Manuela JÃ¼rgens},
     title = {LaTeX -- {F}ortgeschrittene {A}nwendungen},
     year = {1995},
     url = {http://www.fernuni-hagen.de/zmi/katalog/A027.shtml},
