--- a/latex/kapitel/rosette.tex
+++ b/latex/kapitel/rosette.tex
@@ -59,7 +59,7 @@ Umwelt, Wirtschaft und Gesellschaft ausgewählt und subjektiv beurteilt werden.
   & 0 & 0 \\
   Montagekosten
   & 0 & 0 \\
-  Betribskosten
+  Betriebskosten
   & 0 & 0 \\
   
   & 0 & 0 \\
