--- a/latex/vorspann/titelseite_mit_bild.tex
+++ b/latex/vorspann/titelseite_mit_bild.tex
@@ -64,7 +64,7 @@ xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
 Modul:	\> Nachhaltigkeit in den Ingenieurwissenschaften	\\			% Namen eingeben
 Studiengang:	\> Informatik	\\			% Namen eingeben
 Autoren:		\> Pascal Grüter, Stefan Andonie		\\					% Namen eingeben
-Datum:			\> \versiondate					\\		% aus Datei vorspann/version.tex lesen
+Datum:			\> 22.05.2016					\\		
 \end{tabbing}
 
 \end{textblock}
