--- a/latex/kapitel/systemgrenze.tex
+++ b/latex/kapitel/systemgrenze.tex
@@ -1,13 +1,13 @@
 \chapter{Systemgrenze}
 \label{chap:Systemgrenze}
 
-Die Definition einer Systemgrenze dient dazu das System auf die Wesentlichen
+Die Definition einer Systemgrenze dient dazu das System auf die wesentlichen
 Punkte zu reduzieren die untersucht werden sollen und die Analyse in einem
-Ã¼berschaubaren Rahmen zuhalten.
+überschaubaren Rahmen zuhalten.
 Dazu müssen Annahmen getroffen werden und Vereinfachungen gemacht werden.
 Die Aussagekraft des Resultates hängt stark damit zusammen wie diese getroffen
 werden. Darum ist es besser ein möglichst konkretes System anzuschauen anstatt
-einen Allgemeinen Fall zu formulieren.
+einen allgemeinen Fall zu formulieren.
 
 Unser Modell besteht aus einem System, in das Ressourcen eingeführt werden
 (Input) und das daraus eine Nutzeinheit produziert, die aus dem System gewonnen
@@ -16,7 +16,7 @@ wird (Output).
 \section{das System}
 
 Wir betrachten in unserer Arbeit ein Heizsystem in Form einer
-Solewasserwärhmepumpe und als Vergleichssystem eine Heizung mit
+Solewasserwärmepumpe und als Vergleichssystem eine Heizung mit
 Ölbrennwertkessel.
 
 \section{Input}
@@ -26,27 +26,28 @@ Systeme pro Jahr.
 Beiden Systemen muss von aussen Energie zugefügt werden um sie zu betreiben.
 Daher können wir die Input Einheit in kWH ausdrücken.
 
-Die Solewasserwärmepumpe bezieht ihre Energie hauptsächlich aus Zwei quellen,
-der aus der Erde in Form von Erdwärme und vom Stromnetz, vor allem um den
-Kompressor zu betreiben und den Solewasserkreislauf in Gang zuhalten.
+Die Solewasserwärmepumpe bezieht ihre Energie hauptsächlich aus zwei Quellen:
+\begin{itemize}
+\item Aus der Erde in Form von Erdwärme
+\item Vom Stromnetz für die Betreibung des Kompressors
+\end{itemize}
+
 Für uns ist vor allem der Stromverbrauch interessant, da dies ein Kostenpunkt
 ist und damit auch Umweltbelastungen verbunden sind.
 Als Grundlage nehmen wir den Schweizer Energiemix nach ...
-Wir betrachten die Erdwärme als Öffentlichesgut, das unbegrenzt und kostenlos
+Wir betrachten die Erdwärme als öffentliches Gut, das unbegrenzt und kostenlos
 zur Verfügung steht.
 
-Ein Ölbrennwertkessel bezieht seine Energie in Form von Heitzöl.
-Wir können den Energieinput dadurch berechnen indem wir den Liter verbrauch
-ansehen und die Energiedichte eines Liter Öls somit haben wir wider den
+Ein Ölbrennwertkessel bezieht seine Energie in Form von Heizöl.
+Wir können den Energieinput dadurch berechnen indem wir den Literverbrauch
+ansehen und die Energiedichte eines Liter Öls somit haben wir den
 Energieinput in kWH pro Jahr erfasst.
 Für einen Liter Heizöl dieses Typs wird so und so viel Energie gerechnet ...
 
-Die Graueenergie, die bei der Herstellung und bei der Montage der Systeme
-verbraucht wird nicht weiter in die Rechnung aufgenommen.
-Wir nehmen an, das die Systeme im Wesentlich aus den gleichen Materialien
-gefertigt sind und das  das Bohren der Löcher für die Erdwärmegewinnung
-nicht sehr ins Gewicht fallen wird.
-Wir nehmen auch an, das das System für eine Lange Dauer erhalten bleibt.
+Die Energie, welche bei der Herstellung und bei der Montage der Systeme
+verbraucht wird, werden wird nicht berücksichtigen.
+Wir nehmen an, das die Systeme im wesentlichen aus den gleichen Materialien
+gefertigt sind. Auch ignorieren wir die benötigte Energie für die Bohrungen der Löcher für die Erdwärmegewinnung.
 Die Lebensdauer einer Heizung ist etwa die selbe wie die des Hauses, 
 30 - 50 Jahre.
 Da wir den Verbrauch pro Jahr berechnen würde sich die Graueenergie auf diesen
