--- a/latex/miniprojekt_waermepumpe.tex
+++ b/latex/miniprojekt_waermepumpe.tex
@@ -156,13 +156,13 @@
 %---------------------------------------------------------------------------
 %\include{vorspann/titelseite_ohne_bild}		% activate for Titelseite ohne Bild
 \include{vorspann/titelseite_mit_bild}			% activate for Titelseite mit Bild
-\include{vorspann/versionen}
+%\include{vorspann/versionen}
 \cleardoubleemptypage
 \setcounter{page}{1}
 \cleardoublepage
 \phantomsection 
 \addcontentsline{toc}{chapter}{Management Summary}
-\include{vorspann/management_summary}
+%\include{vorspann/management_summary}
 \cleardoubleemptypage
 %---------------------------------------------------------------------------
 
