--- a/latex/kapitel/rosette.tex
+++ b/latex/kapitel/rosette.tex
@@ -1,32 +1,31 @@
 \chapter{Nachhaltigkeits Rosette}
 \label{chap:rosette}
 
-Hierzu sollen für beide Systeme je vier Kriterien in den drei Kategorien
-Umwelt, Wirtschaft und Gesellschaft ausgewählt und subjektiv beurteilt werden.
+Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht die Rosette aus drei Kategorien mit je vier Kriterien. Die Kategorien setzen sich zusammen aus Umwelt, Wirtschaft und Gesellschaft. Unsere Einteilung hat folgende Kriterien ergeben:
 
 \section{Kriterien}
 
 \begin{itemize}
-  \item Umwelt
+  \item \textbf{Umwelt}
     \begin{itemize}
       \item Treibhausgas Emissionen
-      \item Energieverbrauch nicht Erneuerbarer Energie
+      \item Verbrauch von fossilen Ressourcen
       \item Wirkungsgrad und Effizienz
       \item Nachhaltigkeit verbrauchter Ressourcen
     \end{itemize}
- \item Wirtschaft
+ \item \textbf{Wirtschaft}
     \begin{itemize}
       \item Preis
       \item Montagekosten
       \item Betriebskosten
-      \item hallo
+      \item Verfügbarkeit
     \end{itemize}
- \item Gesellschaft
+ \item \textbf{Gesellschaft}
     \begin{itemize}
       \item Akzeptanz
       \item Lärmbelastung
-      \item hallo
-      \item hallo
+      \item Trend
+      \item ?
     \end{itemize}
 \end{itemize}
 
