--- a/latex/miniprojekt_waermepumpe.tex
+++ b/latex/miniprojekt_waermepumpe.tex
@@ -177,9 +177,12 @@
 \pagenumbering{arabic}
 
 \include{kapitel/einleitung}
-\include{kapitel/swot}
 \include{kapitel/systemgrenze}
+\include{kapitel/swot}
 \include{kapitel/rosette}
+\include{kapitel/energiebilanz}
+\include{kapitel/fazit}
+
 
 %---------------------------------------------------------------------------
 
