swot und rosette

--- a/latex/kapitel/rosette.tex
+++ b/latex/kapitel/rosette.tex
@@ -1,36 +1,17 @@
 \chapter{Nachhaltigkeits Rosette}
 \label{chap:rosette}
 
-Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht die Rosette aus drei Kategorien mit je vier Kriterien. Die Kategorien setzen sich zusammen aus Umwelt, Wirtschaft und Gesellschaft. Unsere Einteilung hat folgende Kriterien ergeben:
+Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht die Rosette aus drei Kategorien mit je vier Kriterien. Die Kategorien setzen sich zusammen aus Umwelt, Wirtschaft und Gesellschaft. Die Einteilung der Kriterien ist subjektiv, genauso wie die Bewertung der einzelnen.
 
-\section{Kriterien}
 
-\begin{itemize}
-  \item \textbf{Umwelt}
-    \begin{itemize}
-      \item Treibhausgas Emissionen
-      \item Verbrauch von fossilen Ressourcen
-      \item Wirkungsgrad und Effizienz
-      \item Nachhaltigkeit verbrauchter Ressourcen
-    \end{itemize}
- \item \textbf{Wirtschaft}
-    \begin{itemize}
-      \item Preis
-      \item Montagekosten
-      \item Betriebskosten
-      \item Verfügbarkeit
-    \end{itemize}
- \item \textbf{Gesellschaft}
-    \begin{itemize}
-      \item Akzeptanz
-      \item Lärmbelastung
-      \item Trend
-      \item ?
-    \end{itemize}
-\end{itemize}
 
 \section{Bewertung}
-\subsection{Überblick}
+
+\begin{figure}[h]
+\caption{Nachhaltigkeitsrosette}
+\includegraphics[scale=0.5]{bilder/Rosette.png}
+
+\end{figure}
 
 \begin{center}
 \begin{tabular}[c]{|p{0.25 \textwidth}|p{0.25 \textwidth}|p{0.25 \textwidth}|}
@@ -42,43 +23,69 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
 
   \multicolumn{3}{|c|}{\textbf{\Large{Umwelt}}} \\ \hline
   
-  Treibhausgas Emissionen
-  & 0 & 0 \\
-  Energieverbrauch nicht Erneuerbarer Energie
-  & 0 & 0 \\
-  Wirkungsgrad und Effizienz
-  & 0 & 0 \\
-  Nachhaltigkeit verbrauchter Ressourcen
-  & 0 & 0 \\
+  Emissionen
+  & 8 & 3 \\
+  Fossile Ressourcen
+  & 7 & 1 \\
+  Effizienz
+  & 7 & 7 \\
+  Lebensdauer
+  & 5 & 5 \\ %Recherche nötig
   \hline
   
   \multicolumn{3}{|c|}{\textbf{\Large{Wirtschaft}}} \\ \hline
   
   Preis
-  & 0 & 0 \\
+  & 0 & 0 \\ %Recherche nötig
   Montagekosten
-  & 0 & 0 \\
+  & 4 & 7 \\
   Betriebskosten
-  & 0 & 0 \\
-  
-  & 0 & 0 \\
+  & 8 & 5 \\
+  Verfügbarkeit
+  & 5 & 8 \\
   \hline
 
   \multicolumn{3}{|c|}{\textbf{\Large{Gesellschaft}}} \\ \hline
 
   Akzeptanz
-  & 0 & 0 \\
+  & 8 & 3 \\
   Lärmbelastung
-  & 0 & 0 \\
-
-  & 0 & 0 \\
-
-  & 0 & 0 \\
+  & 5 & 7 \\
+  Trend
+  & 7 & 4 \\
+  Politische Einstellung
+  & 7 & 3 \\ %Recherche nötig
   \hline
 
 \end{tabular}
 \end{center}
 
-\subsection{Begründungen}
+\subsection{Erklärungen}
 
+\begin{itemize}
 
+\item \textbf{Emissionen}: Wärmepumpe klar im Vorteil, da so gut wie keine Emissionen. Keine Maximalwertung da bei der Stromerzeugung Emissionen entstehen können.
+
+\item \textbf{Fossile Ressourcen}: Wärmepumpe klar vorne, da die Ölheizung von ihrem Funktionsprinzip her vollständig auf fossile Ressourcen angewiesen ist.
+
+\item \textbf{Effizienz}: Beide ziemlich ähnlich. Ölheizungen erreichen einen Wirkungsgrad von bis zu 97\%. Die Wärmepumpe braucht viel Strom, kann aber einen Grossteil der Wärme aus dem Erdkreislauf bekommen.
+
+\item \textbf{Lebensdauer}: Recherche
+
+\item \textbf{Preis}: Recherche
+
+\item \textbf{Montagekosten}: Ölheizung im Vorteil, da die Wärmepumpe aufwändige Bohrungen benötigt.
+
+\item \textbf{Betriebskosten}: Wärmepumpe hat den Vorteil des Erdwärmekreislaufs. Dadurch muss nicht die ganze Wärmeleistung von aussen zugeführt werden, wie bei der Ölheizung.
+
+\item \textbf{Verfügbarkeit}: Ölheizung benötigt nur ein Tank, welcher fast überall platziert werden kann. Die Wärmepumpe kann nicht überall eingesetzt werden, da tiefe Bohrungen notwendig sind. 
+
+\item \textbf{Akzeptanz}: Durch die Globalisierung wird die Nachhaltigkeit immer mehr betont. Dadurch ist die Akzeptanz für Wärmepumpen sicher um einiges höher, da Öl schnell mit Umweltverschmutzung in Verbindung gebracht wird.
+
+\item \textbf{Lärmbelastung}: Wärmepumpen sind im Betrieb ein bisschen lauter als Ölheizungen.
+
+\item \textbf{Trend}: Ähnlich wie bei der Akzeptanz, begünstigen die Medien und die aktuelle Ressourcenlage den Trend nach nachhaltigeren Produkten und Systemen.
+
+\item \textbf{Politische Einstellung}: Durch die Debatte des Atomausstiegs, wurde auch die Politik auf das Thema der Nachhaltigkeit aufmerksam. Dadurch sind Wärmepumpen sicher im Vorteil.
+
+\end{itemize}
