--- a/latex/kapitel/swot.tex
+++ b/latex/kapitel/swot.tex
@@ -5,81 +5,98 @@
 
 \begin{tabular}[c]{|p{0.5 \textwidth}|p{0.5 \textwidth}|}
   \hline
-  \textbf{\Large{Strengths}} &
-  \textbf{\Large{Weaknesses}} \\ \hline
+  \textbf{Strengths} &
+  \textbf{Weaknesses} \\ \hline
   
   \begin{itemize}
-    \item Geringe Schadstoff belastung für die Umwelt
-    \item Geringer Energieverbrauch
-    \item Geringere Betriebskosten
+    \item Geringe Schadstoffemissionen
+    \item Keine direkten fossilen Ressourcen
+    \item Geringe Betriebskosten
   \end{itemize}
   &
   
   \begin{itemize}
-    \item Bauliche Massnahmen, Bohrungen
+    \item Montagekosten, Bohrungen
     \item Geringe Vorlauftemperatur
-    \item Gute Isolierung wichtig
+    \item Gute Isolierung benötigt
   \end{itemize}
   \\ \hline
   
-  \textbf{\Large{Opportunities}} &
-  \textbf{\Large{Threats}} \\ \hline
+  \textbf{Opportunities} &
+  \textbf{Threats} \\ \hline
   
   \begin{itemize}
-    \item Sanierung alter Gebäude
+    \item Solarstrom
     \item Neubauten
-    \item Einführung von Energiestandards für Gebäude
+    \item Hohe Effizienz
   \end{itemize}
   &
   
   \begin{itemize}
     \item Tiefer Ölpreis
-    \item Solarkraft
-    \item Abwärme Industrie
+    \item Strompreis
+    \item Neue Heizungstechniken
   \end{itemize}  
   \\ \hline
 \end{tabular}
+
+\subsection{Erklärungen}
+
+Durch den Erdwärmekreislauf benötigt die Wärmepumpe für den Betrieb wenig Energie. Auch werden dadurch keine Schadstoffe während des Betriebs freigesetzt und keine fossilen Ressourcen wie z.B Öl gebraucht.
+
+Diese Vorteile sind aber mit gewissen Kosten verbunden. Die Montage ist sehr aufwändig und nicht überall möglich, da ziemlich tiefe Bohrungen durchgeführt werden müssen. Auch sind Wärmepumpen erst wirklich effizient, wenn das Haus eine Fussbodenheizung besitzt. Dies hängt mit der eher niedrigen Vorlauftemperatur der Wärmepumpen zusammen.
+
+In Zukunft können die Wärmepumpen sicher noch an Effizienz gewinnen. In Verbindung mit Solarzellen kann ein autonomes Heizungssystem entwickelt werden.
+
+Die Wärmepumpe benötigt vor allem Strom für den Betrieb. Dadurch sind die Betriebskosten sehr abhängig vom Strompreis. 
+
 
 \section{Ölheizung}
 
 \begin{tabular}[c]{|p{0.5 \textwidth}|p{0.5 \textwidth}|}
   \hline
-  \textbf{\Large{Strengths}} &
-  \textbf{\Large{Weaknesses}} \\ \hline
+  \textbf{Strengths} &
+  \textbf{Weaknesses} \\ \hline
   
   \begin{itemize}
-    \item Sowohl hohe wie auch iefe Vorlauftemperaturen möglich
-    \item Beheitzung alter oder schlecht isolierter Gebäude
-    \item Direkte montage ohne Bohrungen oder Leitungen
+    \item Variable Vorlauftemperaturen
+    \item Einfache Montage
   \end{itemize}
   &
   
   \begin{itemize}
     \item Verbrauch fossiler Brennstoffe
-    \item Schadstoffemmisionen
-    \item Energiekosten
+    \item Schadstoffemisionen
     \item Hoher Energieverbrauch
-    \item Einbau eines Öltanks
-    \item Brandgefahr und Möglichkeit des Auslaufens von ÖL
   \end{itemize}
   \\ \hline
   
-  \textbf{\Large{Opportunities}} &
-  \textbf{\Large{Threats}} \\ \hline
+  \textbf{Opportunities} &
+  \textbf{Threats} \\ \hline
   
   \begin{itemize}
     \item Tiefer Ölpreis
-    \item Bessere Energieeffizienz und Verbrauch durch neue Technologie
-    \item Geringerer Schadstoffausstoss durch neue Technologie 
+    \item Bessere Energieeffizienz durch neue Technologien
   \end{itemize}
   &
   
   \begin{itemize}
-    \item Nuzung von Erdwärme und Industrie Abwärme
+  	\item Ölvorkommen erschöpft
     \item Solarkraft
-    \item Einführung von Energiestandards für Gebäude
+    \item Neue Technologien
   \end{itemize}  
   \\ \hline
 \end{tabular}
+
+\subsection{Erklärungen}
+
+Ölheizungen können mit sehr hohen und variablen Vorlaufstemperaturen betrieben werden. Dadurch eignen sie sich auch für ältere Gebäude. 
+Auch die Montage ist der Heizung ist eher einfach. Es wird lediglich genügend Platz für den Öltank benötigt.
+
+Der grösste Nachteil ist ganz klar der Verbrauch von Öl und der Ausstoss von Schadstoffen. Zusätzlich wird die ganze Heizleistung aus der Ölverbrennung gewonnen.
+Dadurch sind die Betriebskosten sind stark abhängig von dem Ölpreis.
+Die Heizung ist aber eher ein Auslaufmodell, da nicht unendlich Öl auf der Erde zur Verfügung steht.
+
+Durch neue Technologien wie der Wärmepumpe oder der Solarwärme, wird die Ölheizung langsam verdrängt werden. Spätestens dann, wenn das Öl knapp wird und im Preis steigt.
 
 
