--- a/latex/miniprojekt_waermepumpe.tex
+++ b/latex/miniprojekt_waermepumpe.tex
@@ -162,7 +162,7 @@
 \cleardoublepage
 \phantomsection 
 \addcontentsline{toc}{chapter}{Management Summary}
-%\include{vorspann/management_summary}
+\include{vorspann/management_summary}
 \cleardoubleemptypage
 %---------------------------------------------------------------------------
 
@@ -226,11 +226,11 @@
 
 % Index
 %---------------------------------------------------------------------------
-\cleardoublepage
-\phantomsection 
-\addcontentsline{toc}{chapter}{Stichwortverzeichnis}
-\renewcommand{\indexname}{Stichwortverzeichnis}
-\printindex
+%\cleardoublepage
+%\phantomsection 
+%\addcontentsline{toc}{chapter}{Stichwortverzeichnis}
+%\renewcommand{\indexname}{Stichwortverzeichnis}
+%\printindex
 %---------------------------------------------------------------------------
 
 % Attachment:
